# plumb-craft

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  SKILL.md  pyproject.toml
.trae/: SKILL.md
.trae/rules/: 00-skill-generation.md  01-minimal-unit.md  02-path-structure.md  03-metadata-std.md  04-registry-update.md
.trae/skills/registry-updater/: SKILL.md
.trae/skills/skill-analyzer/: SKILL.md
.trae/skills/skill-creator/: SKILL.md
agents/: skill_registry.yaml  template.yaml
common/inc/: data_struct.py  error_code.py  platform_def.py
common/src/: cmd_utils.py  config_parser.py  log_utils.py  path_utils.py  platform_detect.py
framework/src/: skill_init.py  skill_lint.py  skill_test.py  workflow_orch.py
meta-spec/: 00_principles.md  01_layer_arch.md  01_skills_index.md  02_dir_std.md  02_general_rules.md  03_skill_contract.md  06_security_rule.md
meta-spec/04_script_std/: cross_platform.md  error_handle.md  python_style.md
platform-knowledge/: common-linux.md  imx6ull.md  rk3562.md
scripts/: install.py
skills/: catalog_frame.md
skills/hardware/gpio-config/: SKILL.md
skills/hardware/i2c-scan/: SKILL.md
skills/hardware/spi-debug/: SKILL.md
skills/platform/freertos-config/: SKILL.md
skills/platform/linux-build/: SKILL.md
skills/software/build-linux-app/: SKILL.md
skills/software/common/: build_utils.py  tool_config.py  version.py
skills/workflow/deploy-release/: SKILL.md
skills/workflow/project-init/: SKILL.md
templates/code/: code_templates.md
templates/report/: report_templates.md
(+12 files in other folders)
